web/styles/zulip.css
/* ... */
.has_actions_popover .info {
    opacity: 1;
    visibility: visible;
}

/* Brighten text because of the dark background */
.dark_background {
    color: hsl(0deg 0% 100%) !important;
}

.dark_background a.message_label_clickable:hover {
    color: hsl(200deg 99% 60%);
}


/* UI redesign: blue links style: https://github.com/zulip/zulip/issues/24877 */
.dark_background a,
.dark_background a:link,
.dark_background a:visited {
    color:hsla(200, 100%, 50%, 1);
  text-decoration-color: hsla(200, 100%, 50%, 0.3);
}
.dark_background a:hover {
    color:hsla(200, 100%, 66%, 1);
  text-decoration-color: hsla(200, 100%, 66%, 0.7);
}
.dark_background a:active{
  color:hsla(200, 100%, 55%, 1);
  text-decoration-color: hsla(200, 100%, 50%, 0.7);
}



.small {
    font-size: 80%;
}

.tiny {
    font-size: 60%;
}

.settings-forgot-password {
    display: inline-block;
    position: relative;
    color: hsl(0deg 0% 73%);
    bottom: 4px;
}

div.message_table {
    border-collapse: separate;
    margin-left: auto;
    display: none;
    width: 100%;
}

.message_row {
    position: relative;
    border-left: 1px solid hsl(0deg 0% 0% / 10%);
    border-right: 1px solid hsl(0deg 0% 0% / 10%);

    .date_row {
        /* We only want padding for the date rows between recipient blocks */
        padding-bottom: 0;

        & span {
            font-size: calc(12em / 14);
            font-style: normal;
            font-weight: 600;
            line-height: 17px; /* identical to box height, or 131% */
            text-align: right;
            letter-spacing: 0.04em;
            color: var(--color-date);
        }
    }
}

div.focused_table {
    display: block;
}

.message_content {
    line-height: 1.214;
    min-height: 17px;
    display: block;
    position: relative;
    overflow: hidden;

    &:empty {
        display: none;
    }

    &.condensed {
        max-height: 8.5em;
        min-height: 0;
        overflow: hidden;
    }

    &.collapsed {
        max-height: 0;
        min-height: 0;
        overflow: hidden;
    }
}

/* UI redesign: blue links style: https://github.com/zulip/zulip/issues/24877 */

.message_content a,
.message_content a:link,
.message_content a:visited {
  color: hsla(200, 100%, 36%, 1);
  text-decoration-color: hsla(200, 100%, 36%, 0.3); 
  text-decoration: underline;
  text-underline-offset: 2px;
}

.message_content a:hover {
  color: hsla(200, 100%, 33%, 1);
  text-decoration-color: hsla(200, 100%, 33%, 0.7);
}

.message_content a:active {
  color: hsla(200, 100%, 30%, 1);
  text-decoration-color: hsla(200, 100%, 30%, 1);
}


.rtl {
    direction: rtl;
}

.message_edit_content {
    line-height: 18px;
    resize: vertical !important;
    max-height: 24em;
}

.message_edit_countdown_timer {
    text-align: right;
    display: inline;
    color: hsl(0deg 0% 63%);
}

.message_edit_tooltip {
    display: inline;
    color: hsl(0deg 0% 63%);
}

.message-edit-timer {
    float: right;
    display: none;
    margin-top: 5px;
}

.message-edit-feature-group {
    display: inline-flex;
    margin: 0 auto -5px 10px;
    align-items: baseline;
}

.message_edit_save .loader {
    display: none;
    vertical-align: top;
    position: relative;
    height: 28px;
    margin-top: -10px;
    top: 6px;
    width: 30px;
}

.edit-controls {
    .btn-wrapper {
        cursor: not-allowed;
    }

    .disable-btn {
        pointer-events: none;
    }
}

.topic_edit {
    display: none;
    line-height: 22px;

    .alert {
        display: inline-block;
        margin: 0;
        padding: 0 10px;
        line-height: 17px;
    }
}

#inline_topic_edit {
    margin-bottom: 5px;
    width: 206px;

    &.header-v {
        height: 18px;
        display: inline-block;
        padding: 0 3px;
        vertical-align: baseline;
        line-height: 0px;
        box-shadow: none;
    }
}

#message_edit_topic {
    margin: 0 5px 10px 0;
}

.message_edit_header {
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-start;
}

#inline_topic_edit:focus,
#message_edit_topic:focus {
    outline: none;
}

#move_topic_modal select {
    width: auto;
    margin-bottom: 10px;
    max-width: 100%;
}

.topic_move_breadcrumb_messages,
.message_edit_breadcrumb_messages {
    margin: 0 5px 5px 0;
    align-self: center;
    width: 100%;
    white-space: nowrap;

    & label.checkbox {
        /* Place the checkboxes on their own lines. */
        display: block;

        & input {
            margin: 0;
            vertical-align: baseline;
        }

        & + label.checkbox {
            margin-top: 10px;
        }
    }

    & label {
        display: inline-block;
        margin-right: 10px;
    }
}

.message_edit_breadcrumb_messages {
    margin-bottom: 10px;
}

.message_length_controller {
    display: none;
    text-align: center;
    color: hsl(200deg 100% 40%);

    /* to make message-uncollapse easier */
    margin-top: 10px;

    &:hover {
        text-decoration: underline;
    }
}

.bookend {
    margin-top: 10px;
    background-color: transparent;
}

.inline_profile_picture {
    display: inline-block;
    width: 35px;
    height: 35px;
    margin-right: 11px;
    vertical-align: top;
    border-radius: 4px;
    overflow: hidden;

    &.guest-avatar::after {
        outline: 2px solid hsl(0deg 0% 100%);
    }
}

.home-error-bar {
    margin-top: 5px;
    display: none;

    .alert {
        margin-bottom: auto;
    }
}

.streamname {
    font-weight: bold;
}

.top-navbar-border {
    border-right: 1px solid hsl(0deg 0% 88%);
    border-left: 1px solid hsl(0deg 0% 88%);
}

.search_icon {
    /* These rules match the .dropdown-toggle CSS for the gear menu. */
    color: inherit;
    opacity: 0.5;
    text-decoration: none;

    &:hover {
        opacity: 1;
    }
}
/* ... */

